Fix newsletter on iOS by removing target=_blank
Mobile Safari would not submit the form otherwise.

--- a/assets/css/rug14.sass
+++ b/assets/css/rug14.sass
@@ -357,7 +357,7 @@ hr
   &:hover
     background: white
   @media screen and (max-width: $break_small)
-    display: none !important
+    visibility: hidden
 .form-editing
   .newsletter-signup-submit
     display: block
